# reeder

./: .coveragerc  .editorconfig  .envrc  .hadolint.yaml  .pre-commit-config.yaml  Containerfile  LICENSE  README.rst  lefthook.toml  pyproject.toml  renovate.json  ruff.toml
.github/workflows/: _setup.yaml  tests.yaml
reed/: __main__.py  content.py  contracts.py  subtitles.py  web.py
scripts/: ship
tests/: test_content.py  test_subtitles.py  test_web.py
tests/fixtures/: traffic_stop_card.pdf.base64  traffic_stop_card.txt
