[project]
name = "reed"
version = "0.1.0"
description = "Textify a resource"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "deal>=4.24.5",
    "httpx>=0.28.1",
    "lxml[html-clean]>=5.3.2",
    "pdftotext>=3.0.0",
    "readability-lxml>=0.8.1",
    "yt-dlp>=2025.3.31",
]

[dependency-groups]
dev = [
    "deal-solver>=0.1.2",
    "hypothesis>=6.131.0",
    "mypy>=1.15.0",
    "ptpython>=3.0.29",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
    "types-beautifulsoup4>=4.12.0.20250204",
]
