[project]
name = "reeder"
version = "0.1.0"
description = "Textify a resource"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "deal>=4.24.5",
    "httpx>=0.28.1",
    "pdfminer-six[image]>=20250416",
    "python-readability>=0.1.3",
    "yt-dlp>=2025.3.31",
]

[project.scripts]
reed = "reed.__main__:main"

[dependency-groups]
dev = [
    "deal-solver>=0.1.2",
    "hypothesis>=6.131.0",
    "mypy>=1.15.0",
    "ptpython>=3.0.29",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.5",
    "types-beautifulsoup4>=4.12.0.20250204",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["reed", "tests"]
console_output_style = "progress"
addopts = [
    "--cov=reed",
    "--doctest-modules",
    "--strict-config",
    "--strict-markers",
    "-rA",
]
filterwarnings = ["error"]

[tool.mypy]
plugins = ["deal.mypy"]

# any
disallow_any_decorated = true
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = true
disallow_subclassing_any = true

# untyped
allow_untyped_globals = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

# optionals
no_implicit_optional = true
strict_optional = true

# imports
follow_imports = "normal"
ignore_missing_imports = false

warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

strict_equality = true

# error formating
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ".venv.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "readability"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pdftotext"
ignore_missing_imports = true
